/**
 * Octane gRPC Type Constants
 * 
 * Based on protobuf definitions from octaneProxy/generated/common_pb2.py
 * These values are used to populate objectPtr.type fields in gRPC requests
 */

export const ObjectType = {
  ApiFileName: 0,
  ApiGeometryExporter: 1,
  ApiGuiComponent: 2,
  MetaData: 3,
  ApiImageBuffer: 4,
  ImageType: 5,
  LayerInfo: 6,
  ApiAttributeInfo: 7,
  ApiOcioConfig: 8,
  ApiOctaneModuleInfo: 9,
  ApiOutputColorSpaceInfo: 10,
  ApiSharedSurface: 11,
  ImageExportSettings: 12,
  RenderPassExport: 13,
  RenderResultStatistics: 14,
  ReferencePackageExportSettings: 15,
  ApiItem: 16,
  ApiNode: 17,
  ApiRootNodeGraph: 18,
  ApiReferenceGraph: 19,
  ApiNodeGraph: 20,
  AnimationTimeTransform: 21,
  ApiAnimationTimeTransform: 22,
  ApiLinearTimeTransform: 23,
  SocketAddress: 24,
  TimeSpanT: 25,
  FrameRangeT: 26,
  ApiCustomCurveEditorController: 27,
  DBCategoryArray: 28,
  DBMaterialArray: 29,
  ImageInfo: 30,
  ApiItemArray: 31,
  Package: 32,
  Category: 33,
  ApiNodeArray: 34,
  ApiOcioConfigLoader: 35,
  ApiOcioContextManager: 36,
  ApiPackage: 37,
  ApiRenderImage: 38,
  ApiSceneExporter: 39,
  VdbGridInfo: 40,
  VdbInfo: 41,
  ApiMainWindow: 42,
  ApiProjectWorkspace: 43,
  ApiNodePinInfo: 44,
  ApiCompatibilityModeInfo: 45,
  ApiCompatibilityModeInfoSet: 46,
} as const;

// Type helper for reverse lookup
export type ObjectTypeName = keyof typeof ObjectType;
export type ObjectTypeValue = typeof ObjectType[ObjectTypeName];


// Node Type Constants
// These define the actual Octane node types (NT_*)
export const NodeType = {
    NT_UNKNOWN: 0,
    NT_GEO_MESH: 1,
    NT_MAT_MAP: 2,
    NT_GEO_GROUP: 3,
    NT_GEO_PLACEMENT: 4,
    NT_GEO_SCATTER: 5,
    NT_FLOAT: 6,
    _NT_FLOAT2: 7,
    _NT_FLOAT3: 8,
    NT_INT: 9,
    _NT_INT2: 10,
    NT_BOOL: 11,
    NT_IMAGE_RESOLUTION: 12,
    NT_CAM_THINLENS: 13,
    NT_ENV_DAYLIGHT: 14,
    NT_IMAGER_CAMERA: 15,
    NT_MAT_GLOSSY: 16,
    NT_MAT_DIFFUSE: 17,
    NT_MAT_SPECULAR: 18,
    NT_MAT_MIX: 19,
    NT_MAT_PORTAL: 20,
    _NT_CAMERARESPONSE: 21,
    NT_TEX_TURBULENCE: 22,
    NT_KERN_PMC: 23,
    NT_KERN_DIRECTLIGHTING: 24,
    NT_KERN_PATHTRACING: 25,
    NT_KERN_INFO: 26,
    NT_TRANSFORM_3D: 27,
    NT_TRANSFORM_SCALE: 28,
    NT_TRANSFORM_ROTATION: 29,
    NT_SUN_DIRECTION: 30,
    NT_TEX_FLOAT: 31,
    NT_TEX_GAUSSIANSPECTRUM: 32,
    NT_TEX_RGB: 33,
    NT_TEX_IMAGE: 34,
    NT_TEX_ALPHAIMAGE: 35,
    NT_TEX_FLOATIMAGE: 36,
    NT_ENV_TEXTURE: 37,
    NT_TEX_MIX: 38,
    NT_TEX_MULTIPLY: 39,
    NT_TEX_COSINEMIX: 40,
    NT_TEX_CLAMP: 41,
    NT_TEX_SAWWAVE: 42,
    NT_TEX_TRIANGLEWAVE: 43,
    NT_TEX_SINEWAVE: 44,
    NT_TEX_CHECKS: 45,
    NT_TEX_INVERT: 46,
    NT_TEX_MARBLE: 47,
    NT_TEX_RGFRACTAL: 48,
    NT_TEX_GRADIENT: 49,
    NT_TEX_FALLOFF: 50,
    NT_TEX_COLORCORRECTION: 51,
    NT_EMIS_BLACKBODY: 53,
    NT_EMIS_TEXTURE: 54,
    NT_LOCAL_APP_PREFS: 55,
    NT_RENDERTARGET: 56,
    NT_ENUM: 57,
    NT_MED_ABSORPTION: 58,
    NT_MED_SCATTERING: 59,
    NT_PHASE_SCHLICK: 60,
    NT_POSTPROCESSING: 61,
    NT_CAM_PANORAMIC: 62,
    NT_TEX_DIRT: 63,
    NT_OBJECTLAYER_MAP: 64,
    NT_OBJECTLAYER: 65,
    NT_TRANSFORM_2D: 66,
    NT_TRANSFORM_VALUE: 67,
    NT_ANNOTATION: 68,
    NT_KERN_MATPREVIEW: 69,
    NT_PROJECT_SETTINGS: 70,
    _NT_REMOTE_APP_PREFS: 71,
    NT_SPLIT_PANE: 72,
    NT_WORK_PANE: 73,
    NT_PROJ_CYLINDRICAL: 74,
    NT_PROJ_LINEAR: 75,
    NT_PROJ_PERSPECTIVE: 76,
    NT_PROJ_SPHERICAL: 77,
    NT_PROJ_UVW: 78,
    NT_PROJ_BOX: 79,
    NT_DISPLACEMENT: 80,
    NT_TEX_RANDOMCOLOR: 81,
    NT_IMPORT_ALEMBIC_PREFS: 82,
    NT_IMPORT_OBJ_PREFS: 83,
    NT_STRING: 84,
    NT_PROGRAMMABLE_GRAPH_INPUT: 85,
    NT_RENDER_PASSES: 86,
    NT_TEX_NOISE: 87,
    NT_FILE: 88,
    NT_TEX_SIDE: 89,
    NT_RENDER_LAYER: 90,
    NT_GEO_VOLUME: 91,
    _NT_ORC_VERSION: 92,
    NT_IMPORT_VDB_PREFS: 93,
    NT_CAM_BAKING: 94,
    NT_VOLUME_RAMP: 95,
    NT_VERTEX_DISPLACEMENT: 97,
    NT_MED_VOLUME: 98,
    NT_ANIMATION_SETTINGS: 99,
    NT_FILM_SETTINGS: 100,
    NT_DIRECTORY: 101,
    NT_GEO_JOINT: 102,
    NT_LUT_CUSTOM: 103,
    NT_TEX_W: 104,
    NT_RENDER_JOB_GROUP: 105,
    NT_TEX_ADD: 106,
    NT_TEX_COMPARE: 107,
    NT_TEX_SUBTRACT: 108,
    NT_TEX_TRIPLANAR: 109,
    NT_GEO_PLANE: 110,
    NT_PROJ_TRIPLANAR: 111,
    NT_IMPORT_IMAGE_PREFS: 112,
    NT_TEX_INSTANCE_COLOR: 113,
    NT_TEX_INSTANCE_RANGE: 114,
    NT_TEX_BAKED_IMAGE: 115,
    NT_MAT_OSL: 116,
    NT_TEX_OSL: 117,
    NT_TEX_UVW_TRANSFORM: 118,
    NT_IMPORT_FBX_PREFS: 119,
    NT_MAT_METAL: 120,
    NT_MAT_TOON: 121,
    NT_TOON_RAMP: 122,
    NT_TOON_POINT_LIGHT: 123,
    NT_TOON_DIRECTIONAL_LIGHT: 124,
    NT_PROJ_OSL: 125,
    NT_CAM_OSL: 126,
    NT_PROJ_OSL_UV: 127,
    NT_CAM_OSL_BAKING: 128,
    NT_ENV_PLANETARY: 129,
    NT_MAT_UNIVERSAL: 130,
    NT_TEX_IMAGE_TILES: 131,
    NT_BIT_MASK: 132,
    NT_GEO_OSL: 133,
    NT_GEO_VOLUME_SDF: 134,
    NT_TEX_COLOUR_VERTEXATTRIBUTE: 135,
    NT_TEX_FLOAT_VERTEXATTRIBUTE: 136,
    NT_ROUND_EDGES: 137,
    NT_MAT_COMPOSITE: 138,
    NT_MAT_SPECULAR_LAYER: 139,
    NT_MAT_DIFFUSE_LAYER: 140,
    NT_MAT_METALLIC_LAYER: 141,
    NT_MAT_SHEEN_LAYER: 142,
    NT_MAT_LAYER: 143,
    NT_MAT_LAYER_GROUP: 144,
    NT_MAT_SHADOW_CATCHER: 145,
    NT_MED_RANDOMWALK: 146,
    NT_MAT_HAIR: 147,
    NT_LIGHT_QUAD: 148,
    NT_LIGHT_SPHERE: 149,
    _NT_COATING_LAYER: 150,
    NT_VERTEX_DISPLACEMENT_MIXER: 151,
    NT_LIGHT_VOLUME_SPOT: 152,
    NT_GEO_OBJECT: 153,
    NT_GEO_SDF_UNION: 154,
    NT_GEO_SDF_SUBTRACT: 155,
    NT_GEO_EXPORTER: 156,
    NT_CAM_UNIVERSAL: 157,
    NT_TEX_SPOTLIGHT: 158,
    NT_MAT_NULL: 159,
    NT_OCIO_VIEW: 160,
    NT_OCIO_LOOK: 161,
    NT_TEX_C4D_NOISE: 162,
    NT_OCIO_COLOR_SPACE: 163,
    NT_SCATTER_SURFACE: 164,
    NT_SCATTER_VOLUME: 165,
    NT_OUTPUT_AOV_COMPOSITE: 166,
    NT_OUTPUT_AOV_GROUP: 167,
    NT_OUTPUT_AOV_IMAGE: 168,
    NT_OUTPUT_AOV_RENDER: 169,
    NT_TEX_CHAOS: 170,
    NT_TEX_CHANNEL_PICK: 171,
    NT_TEX_CHANNEL_MERGE: 172,
    NT_TEX_RAY_SWITCH: 173,
    NT_TEX_CHANNEL_INVERT: 174,
    NT_TEX_CHANNEL_MAP: 175,
    NT_TEX_COMPOSITE: 176,
    NT_OUTPUT_AOV_COLOR: 177,
    NT_MAT_CLIPPING: 178,
    NT_RENDER_AOV_GROUP: 179,
    NT_AOV_DENOISE_HIT_DISTANCE: 180,
    NT_AOV_DENOISE_ROUGHNESS: 181,
    NT_AOV_DENOISE_NORMAL: 182,
    NT_AOV_AMBIENT_OCCLUSION: 183,
    NT_AOV_BAKING_GROUP_ID: 184,
    NT_AOV_CRYPTOMATTE: 185,
    NT_AOV_CUSTOM: 186,
    NT_TEX_IRIDESCENT: 187,
    NT_AOV_DIFFUSE: 188,
    NT_AOV_DIFFUSE_DIRECT: 189,
    NT_AOV_DIFFUSE_DIRECT_DENOISER_OUTPUT: 190,
    NT_AOV_DIFFUSE_FILTER: 191,
    NT_AOV_DIFFUSE_FILTER_INFO: 192,
    NT_AOV_DIFFUSE_INDIRECT: 193,
    NT_AOV_DIFFUSE_INDIRECT_DENOISER_OUTPUT: 194,
    NT_AOV_EMISSION_DENOISER_OUTPUT: 195,
    NT_AOV_EMIT: 196,
    NT_AOV_ENVIRONMENT: 197,
    NT_AOV_GEOMETRIC_NORMAL: 198,
    NT_AOV_GLOBAL_TEX: 199,
    NT_AOV_IOR: 200,
    NT_AOV_IRRADIANCE: 201,
    NT_AOV_LAYER_BLACK_SHADOWS: 202,
    NT_AOV_LAYER_REFLECTIONS: 203,
    NT_AOV_LAYER_SHADOWS: 204,
    NT_AOV_LIGHT: 205,
    NT_AOV_LIGHT_DIRECT: 206,
    NT_AOV_LIGHT_DIRECTION: 207,
    NT_AOV_LIGHT_INDIRECT: 208,
    NT_AOV_LIGHT_PASS_ID: 209,
    NT_AOV_MATERIAL_ID: 210,
    NT_AOV_MOTION_VECTOR: 211,
    NT_AOV_NOISE_BEAUTY: 212,
    NT_AOV_NOISE_DIFFUSE_DIRECT: 213,
    NT_AOV_NOISE_DIFFUSE_INDIRECT: 214,
    NT_AOV_NOISE_REFLECTION_DIRECT: 215,
    NT_AOV_NOISE_REFLECTION_INDIRECT: 216,
    NT_AOV_OBJECT_ID: 217,
    NT_AOV_OBJECT_LAYER_COLOR: 218,
    NT_AOV_OPACITY: 219,
    NT_AOV_POSITION: 220,
    NT_AOV_POST_PROCESSING: 221,
    NT_AOV_REFLECTION: 222,
    NT_AOV_REFLECTION_DIRECT: 223,
    NT_AOV_REFLECTION_DIRECT_DENOISER_OUTPUT: 224,
    NT_AOV_REFLECTION_FILTER: 225,
    NT_AOV_REFLECTION_FILTER_INFO: 226,
    NT_AOV_REFLECTION_INDIRECT: 227,
    NT_AOV_REFLECTION_INDIRECT_DENOISER_OUTPUT: 228,
    NT_AOV_REFRACTION: 229,
    NT_AOV_REFRACTION_FILTER: 230,
    NT_AOV_REFRACTION_FILTER_INFO: 231,
    NT_AOV_REMAINDER_DENOISER_OUTPUT: 232,
    NT_AOV_RENDER_LAYER_ID: 233,
    NT_AOV_RENDER_LAYER_MASK: 234,
    NT_AOV_ROUGHNESS: 235,
    NT_AOV_SHADING_NORMAL: 236,
    NT_AOV_SHADOW: 237,
    NT_AOV_SSS: 238,
    NT_AOV_TANGENT_NORMAL: 239,
    NT_AOV_TANGENT_U: 240,
    NT_AOV_TRACE_CLOCK: 241,
    NT_AOV_TRANSMISSION_FILTER: 242,
    NT_AOV_TRANSMISSION_FILTER_INFO: 243,
    NT_AOV_TRANSMISSION: 244,
    NT_AOV_UV_COORD: 245,
    NT_AOV_VOLUME: 246,
    NT_AOV_VOLUME_DENOISER_OUTPUT: 247,
    NT_AOV_VOLUME_EMISSION: 248,
    NT_AOV_VOLUME_EMISSION_DENOISER_OUTPUT: 249,
    NT_AOV_VOLUME_MASK: 250,
    NT_AOV_VOLUME_Z_DEPTH_FRONT: 251,
    NT_AOV_VOLUME_Z_DEPTH_BACK: 252,
    NT_AOV_SMOOTH_NORMAL: 253,
    NT_AOV_WIREFRAME: 254,
    NT_AOV_Z_DEPTH: 255,
    NT_TEX_READ_VDB: 256,
    NT_GEO_MESH_VOLUME_SDF: 257,
    NT_PROJ_COLOR_TO_UVW: 258,
    NT_IMPORT_USD_PREFS: 259,
    NT_TEX_VORONOI_SMOOTH_CONTOURS: 260,
    NT_TEX_TILE_PATTERNS: 261,
    NT_TEX_PROCEDURAL_EFFECTS: 262,
    NT_TEX_CHAINMAIL: 263,
    NT_TEX_MOIRE_MOSAIC: 264,
    NT_TEX_COLOR_SQUARES: 265,
    NT_TEX_STRIPES: 266,
    NT_TEX_FLAKES: 267,
    NT_TEX_FRACTAL: 268,
    NT_TEX_HAGELSLAG: 269,
    NT_TEX_GLOWING_CIRCLE: 270,
    NT_TEX_CURVATURE: 271,
    NT_KERN_PHOTONTRACING: 272,
    NT_AOV_PRIMITIVE_TYPE: 273,
    NT_GEO_MESH_VOLUME: 274,
    NT_TEX_CELLNOISE: 275,
    NT_MED_STANDARD_VOLUME: 276,
    NT_MAT_STANDARD_SURFACE: 277,
    NT_GEO_SDF_DOMAIN: 278,
    NT_FLOAT_IF: 279,
    NT_INT_IF: 280,
    NT_FLOAT_TO_INT: 281,
    NT_INT_TO_FLOAT: 282,
    NT_TRANSFORM_LOOKAT: 283,
    NT_FLOAT_COMPONENT_MERGER: 284,
    NT_FLOAT_COMPONENT_PICKER: 285,
    NT_INT_COMPONENT_MERGER: 286,
    NT_INT_COMPONENT_PICKER: 287,
    NT_BOOL_LOGIC_OPERATOR: 288,
    NT_FLOAT_RELATIONAL_OPERATOR: 289,
    NT_INT_RELATIONAL_OPERATOR: 290,
    NT_FLOAT_MATH_BINARY: 291,
    NT_FLOAT_MATH_UNARY: 292,
    NT_FLOAT_RANGE: 293,
    NT_VEC_ROTATION: 294,
    NT_GEO_UNIT_VOLUME: 295,
    NT_GEO_SDF_BOX: 296,
    NT_GEO_SDF_CAPSULE: 297,
    NT_GEO_SDF_CYLINDER: 298,
    NT_GEO_SDF_PRISM: 299,
    NT_GEO_SDF_SPHERE: 300,
    NT_GEO_SDF_TORUS: 301,
    NT_GEO_SDF_TUBE: 302,
    NT_PROJ_INSTANCE_POSITION: 303,
    NT_TEX_FIELD_ANGULAR: 304,
    NT_TEX_FIELD_PLANAR: 305,
    NT_TEX_FIELD_SHAPE: 306,
    NT_TEX_FIELD_SPHERICAL: 307,
    NT_GEO_SDF_INK: 308,
    NT_GEO_SDF_INSET: 309,
    NT_GEO_SDF_INTERSECT: 310,
    NT_GEO_SDF_CLIP: 311,
    NT_GEO_SDF_OFFSET: 312,
    NT_TEX_PIXEL_FLOW: 313,
    NT_TEX_RAIN_BUMP: 314,
    NT_TEX_SCRATCHES: 315,
    NT_TEX_SNOW: 316,
    NT_PROJ_SAMPLE_POSITION: 317,
    NT_TEX_COMPOSITE_LAYER: 318,
    NT_COMPOSITE_AOV_LAYER: 319,
    NT_TEX_FLOATS_TO_COLOR: 320,
    NT_TEX_FLOAT3_TO_COLOR: 321,
    NT_PROJ_DISTORTED_MESH_UV: 322,
    NT_TEX_CAPTURE: 323,
    NT_TEX_FLOAT_TO_GREYSCALE: 324,
    NT_TEX_CIRCLE_SPIRAL: 325,
    NT_TEX_RAY_DIRECTION: 326,
    NT_TEX_NORMAL: 327,
    NT_TEX_POSITION: 328,
    NT_TEX_RELATIVE_DISTANCE: 329,
    NT_TEX_UV: 330,
    NT_TEX_Z_DEPTH: 331,
    NT_TEX_GRADIENT_GENERATOR: 332,
    NT_TEX_RANDOM_MAP: 333,
    NT_TEX_RANGE: 334,
    NT_TEX_DPDU: 335,
    NT_TEX_DPDV: 336,
    NT_TEX_SAMPLE_POSITION: 337,
    NT_PROJ_MATCAP: 338,
    NT_TEX_MATH_BINARY: 339,
    NT_TEX_MATH_UNARY: 340,
    NT_TEX_FAN_SPIRAL: 341,
    NT_TEX_TRIPPER: 342,
    NT_TEX_WOODGRAIN: 343,
    NT_TEX_FBM_FLOW_NOISE: 344,
    NT_TEX_FBM_NOISE: 345,
    NT_TEX_FRACTAL_FLOW_NOISE: 346,
    NT_TEX_FRACTAL_NOISE: 347,
    NT_TEX_VOLUME_CLOUD: 348,
    NT_TEX_MANDELBULB: 349,
    NT_TEX_WAVE_PATTERN: 350,
    NT_TEX_ROT_FRACTAL: 351,
    NT_TEX_SINE_WAVE_FAN: 352,
    NT_TEX_MATRIX: 353,
    NT_TEX_COLOR_KEY: 354,
    NT_OUTPUT_AOV_CRYPTOMATTE_MASK: 355,
    NT_RNDR_VERSION: 356,
    NT_TEX_IMAGE_ADJUSTMENT: 360,
    NT_TEX_JITTERED_COLOR_CORRECTION: 362,
    NT_TEX_OBJECT_LAYER_COLOR: 363,
    NT_TEX_COLOR_SPACE_CONVERSION: 364,
    NT_TEX_INSTANCE_HIGHLIGHT: 365,
    NT_TEX_STAR_FIELD: 366,
    NT_TEX_DIGITS: 367,
    NT_AOV_SCREENSPACE_MOTION: 368,
    NT_AOV_SECONDARY_RAY_LENGTHS: 369,
    NT_AOV_SAMPLE_OFFSET: 370,
    NT_OUTPUT_AOV_COLOR_CORRECTION: 373,
    NT_OUTPUT_AOV_CLAMP: 374,
    NT_OUTPUT_AOV_MAP_RANGE: 375,
    NT_OUTPUT_AOV_LIGHT_MIXING: 376,
    NT_AOV_PRIMARY_ZDEPTH: 378,
    NT_AOV_POSTFX_MEDIA: 379,
    NT_SWITCH_INTERNAL: 381,
    NT_BLENDING_SETTINGS: 382,
    NT_OUTPUT_AOV_LAYER_CLAMP: 383,
    NT_OUTPUT_AOV_LAYER_ADJUST_CONTRAST: 384,
    NT_OUTPUT_AOV_LAYER_BLEND_LAYERS: 385,
    NT_OUTPUT_AOV_LAYER_MASK_WITH_LAYERS: 386,
    NT_OUTPUT_AOV_LAYER_MASK_WITH_CRYPTOMATTE: 387,
    NT_OUTPUT_AOV_LAYER_GROUP: 388,
    NT_OUTPUT_AOV_LAYER_BLEND_IMAGE: 389,
    NT_OUTPUT_AOV_LAYER_MAP_RANGE: 390,
    NT_OUTPUT_AOV_LAYER_BLEND_RENDER_AOV: 391,
    NT_OUTPUT_AOV_LAYER_BLEND_SOLID_COLOR: 392,
    NT_OUTPUT_AOV: 393,
    NT_OUTPUT_AOV_LAYER_REMOVE_HOT_PIXELS: 394,
    NT_OUTPUT_AOV_LAYER_ADJUST_OPACITY: 395,
    NT_OUTPUT_AOV_LAYER_ADJUST_SATURATION: 396,
    NT_OUTPUT_AOV_LAYER_ADD_VIGNETTE: 397,
    NT_OUTPUT_AOV_LAYER_ADJUST_WHITE_BALANCE: 398,
    NT_OUTPUT_AOV_LAYER_ADJUST_BRIGHTNESS: 399,
    NT_OUTPUT_AOV_LAYER_CONVERT_FOR_SDR_DISPLAY_BASIC: 400,
    NT_LIGHT_ANALYTIC_INTERNAL: 401,
    NT_LIGHT_ANALYTIC: 402,
    NT_LIGHT_DIRECTIONAL: 403,
    NT_POST_VOLUME: 404,
    NT_OUTPUT_AOV_LAYER_CONVERT_FOR_SDR_DISPLAY_OCIO: 405,
    NT_OUTPUT_AOV_LAYER_CONVERT_FOR_SDR_DISPLAY_ACES: 406,
    NT_TEX_LIGHT_FIELD_PLANE: 407,
    NT_AOV_TIME: 408,
    NT_OUTPUT_AOV_LAYER_APPLY_GAMMA_CURVE: 409,
    NT_OUTPUT_AOV_LAYER_ADJUST_HUE: 410,
    NT_OUTPUT_AOV_LAYER_INVERT: 411,
    NT_AOV_PRIMARY_HIT_DATA: 412,
    NT_TEX_COMPOSITE_LAYER_ADJUST_HUE: 413,
    NT_TEX_COMPOSITE_LAYER_ADJUST_CONTRAST: 414,
    NT_TEX_COMPOSITE_LAYER_ADJUST_BRIGHTNESS: 415,
    NT_TEX_COMPOSITE_LAYER_APPLY_GAMMA_CURVE: 416,
    NT_TEX_COMPOSITE_LAYER_ADJUST_SATURATION: 417,
    NT_TEX_COMPOSITE_LAYER_CLAMP: 418,
    NT_TEX_COMPOSITE_LAYER_MATH_UNARY: 419,
    NT_TEX_COMPOSITE_LAYER_MATH_BINARY: 420,
    NT_TEX_COMPOSITE_LAYER_MAP_RANGE: 421,
    NT_TEX_COMPOSITE_LAYER_GROUP: 422,
    NT_TEX_COMPOSITE_LAYER_ADJUST_LIGHTNESS: 423,
    NT_TEX_COMPOSITE_LAYER_ADJUST_SATURATION_HSL: 424,
    NT_TEX_COMPOSITE_LAYER_CHANNEL_MIXER: 425,
    NT_TEX_COMPOSITE_LAYER_GRAYSCALE: 426,
    NT_TEX_COMPOSITE_LAYER_THRESHOLD: 427,
    NT_TEX_COMPOSITE_LAYER_ADJUST_EXPOSURE: 428,
    NT_TEX_COMPOSITE_LAYER_ADJUST_WHITE_BALANCE: 429,
    NT_TEX_COMPOSITE_LAYER_COMPARISON: 430,
    NT_TEX_COMPOSITE_LAYER_ADJUST_COLOR_BALANCE: 431,
    NT_TEX_COMPOSITE_LAYER_MASK_WITH_LAYERS: 432,
    NT_TEX_COMPOSITE_LAYER_APPLY_GRADIENT_MAP: 433,
    NT_OUTPUT_AOV_LAYER_CONVERT_FOR_SDR_DISPLAY_AGX: 434,
    NT_TEX_COMPOSITE_LAYER_APPLY_LUT: 435,
    NT_TEX_LIGHT_FIELD_CUBE: 436,
    NT_TEX_LIGHT_FIELD_ARRAY: 437,
    NT_INT_FRAME_INDEX: 438,
    NT_METADATA: 439,
    NT_AOV_DENOISE_ALBEDO: 440,
    NT_TEX_COMPOSITE_LAYER_APPLY_CUSTOM_CURVE: 441,
    NT_OUTPUT_AOV_LAYER_OPEN_IMAGE_DENOISE: 442,
    NT_OUTPUT_AOV_LAYER_BLEND_LIGHT_MIXER: 445,
    NT_TEX_OUTPUT_AOV_PARAMETER: 446,
    NT_OUTPUT_AOV_LAYER_BLEND_TEXTURE: 447,
    NT_OUTPUT_AOV_LAYER_APPLY_CUSTOM_CURVE: 448,
    NT_OUTPUT_AOV_LAYER_BLEND_SHARED_SURFACE: 449,
    NT_OUTPUT_AOV_SHARED_SURFACE: 450,
    NT_OUTPUT_AOV_LAYER_APPLY_LUT: 451,
    NT_OUTPUT_AOV_LAYER_APPLY_CAMERA_RESPONSE_CURVE: 452,
    NT_OUTPUT_AOV_LAYER_APPLY_OCIO_LOOK: 453,
    NT_OUTPUT_AOV_LAYER_ADD_BLOOM: 454,
    NT_OUTPUT_AOV_LAYER_ADD_GLARE: 455,
    NT_OUTPUT_AOV_LAYER_ADD_LENS_FLARE: 456,
    NT_OUTPUT_AOV_LAYER_ADD_CHROMATIC_ABERRATION: 457,
    NT_OUTPUT_AOV_LAYER_BLUR: 458,
    NT_OUTPUT_AOV_LAYER_CONVERT_FOR_SDR_DISPLAY_SMOOTH: 459,
    NT_OUTPUT_AOV_LAYER_SAVE_CHECKPOINT: 461,
    NT_OUTPUT_AOV_LAYER_LOAD_CHECKPOINT: 462,
    NT_OUTPUT_AOV_LAYER_DISCARD_CHECKPOINT: 463,
    NT_OUTPUT_AOV_LAYER_SHARPEN: 464,
    NT_TRANSFORM_2D_FROM_UV: 465,
    NT_OUTPUT_AOV_LAYER_BOOST_HIGHLIGHTS: 466,
    NT_FLOAT_TIME: 467,
    NT_OUTPUT_AOV_LAYER_DITHER: 468,
    NT_OUTPUT_AOV_LAYER_APPLY_IMAGER_AND_POST_PROCESSING: 469,
    NT_AOV_CAMERA_MASK: 471,
    NT_CAM_SIMULATED_LENS: 472,
    NT_TEX_TRANSFORMED_UV: 473,
    NT_TEX_RGBA: 474,
    NT_TEX_MATRIX_VALUE: 475,
    NT_TEX_TRANSFORM_TO_MATRIX: 476,
    NT_GEO_DECAL: 477,
    NT_TEX_DECAL: 478,
    NT_IMPORT_MATERIALX_PREFS: 479,
    NT_GEO_SDF_DISPLACEMENT: 480,
    NT_GEO_GAUSSIAN_SPLAT: 481,
    NT_TRACE_SET_VISIBILITY_RULE_GROUP: 482,
    NT_TRACE_SET_VISIBILITY_RULE: 483,
    NT_TEX_IMAGE_TILE_SET: 484,
    NT_PROJ_DISTORTED_UVW: 485,
    NT_AOV_ALPHA: 486,
    NT_GEO_SDF_PULL: 487,
    NT_GEO_SDF_PUSH: 488,
    NT_GEO_SDF_AVOID: 489,
    NT_GEO_SDF_REPEL: 490,
    NT_GEO_SDF_MIRROR: 491,
    NT_GEO_SDF_ARRAY_LINEAR: 492,
    NT_GEO_SDF_ARRAY_CIRCULAR: 493,
    NT_GEO_SDF_CONE: 494,
    NT_AOV_GAUSSIAN_SPLAT: 495,
    NT_AOV_GAUSSIAN_SPLAT_INFO: 496,
    NT_TEX_HALFTONE: 497,
    NT_AOV_BIAS_CURR_COLOR: 498,
    NT_AOV_DIFFUSE_FILTER_RGB: 499,
    NT_AOV_PRIMARY_HIT_DISTANCE: 500,
    NT_AOV_PRIMARY_HIT_NORMAL: 501,
    NT_AOV_PRIMARY_HIT_ROUGHNESS: 502,
    NT_AOV_REFLECTION_FILTER_RGB: 503,
    NT_AOV_TRANSPARENCY_MASK: 504,
    NT_MAT_OPEN_PBR_SURFACE: 505,
    NT_OUTPUT_AOV_LAYER_UNBLEND: 506,
    NT_OUTPUT_AOV_LAYER_BLEND_CRYPTOMATTE_MASK: 507,
    NT_IN_OFFSET: 20000,
    NT_IN_BOOL: 20001,
    NT_IN_FLOAT: 20002,
    NT_IN_INT: 20003,
    NT_IN_TRANSFORM: 20004,
    NT_IN_TEXTURE: 20005,
    NT_IN_EMISSION: 20006,
    NT_IN_MATERIAL: 20007,
    NT_IN_CAMERA: 20008,
    NT_IN_ENVIRONMENT: 20009,
    NT_IN_IMAGER: 20010,
    NT_IN_KERNEL: 20011,
    NT_IN_GEOMETRY: 20012,
    NT_IN_MEDIUM: 20013,
    NT_IN_PHASEFUNCTION: 20014,
    NT_IN_FILM_SETTINGS: 20015,
    NT_IN_ENUM: 20016,
    NT_IN_OBJECTLAYER: 20017,
    NT_IN_POSTPROCESSING: 20018,
    NT_IN_RENDERTARGET: 20019,
    NT_IN_PROJECTION: 20021,
    NT_IN_DISPLACEMENT: 20022,
    NT_IN_STRING: 20023,
    NT_IN_RENDER_PASSES: 20024,
    NT_IN_RENDER_LAYER: 20025,
    NT_IN_VOLUME_RAMP: 20026,
    NT_IN_ANIMATION_SETTINGS: 20027,
    NT_IN_LUT: 20028,
    NT_IN_RENDER_JOB: 20029,
    NT_IN_TOON_RAMP: 20030,
    NT_IN_BIT_MASK: 20031,
    NT_IN_ROUND_EDGES: 20032,
    NT_IN_MATERIAL_LAYER: 20033,
    NT_IN_OCIO_VIEW: 20034,
    NT_IN_OCIO_LOOK: 20035,
    NT_IN_OCIO_COLOR_SPACE: 20036,
    NT_IN_OUTPUT_AOV_GROUP: 20037,
    NT_IN_OUTPUT_AOV: 20038,
    NT_IN_TEX_COMPOSITE_LAYER: 20039,
    NT_IN_OUTPUT_AOV_LAYER: 20040,
    NT_IN_BLENDING_SETTINGS: 20044,
    NT_IN_POST_VOLUME: 20045,
    NT_IN_TRACE_SET_VISIBILITY_RULE_GROUP: 20046,
    NT_IN_TRACE_SET_VISIBILITY_RULE: 20047,
    NT_OUT_OFFSET: 30000,
    NT_OUT_BOOL: 30001,
    NT_OUT_FLOAT: 30002,
    NT_OUT_INT: 30003,
    NT_OUT_TRANSFORM: 30004,
    NT_OUT_TEXTURE: 30005,
    NT_OUT_EMISSION: 30006,
    NT_OUT_MATERIAL: 30007,
    NT_OUT_CAMERA: 30008,
    NT_OUT_ENVIRONMENT: 30009,
    NT_OUT_IMAGER: 30010,
    NT_OUT_KERNEL: 30011,
    NT_OUT_GEOMETRY: 30012,
    NT_OUT_MEDIUM: 30013,
    NT_OUT_PHASEFUNCTION: 30014,
    NT_OUT_FILM_SETTINGS: 30015,
    NT_OUT_ENUM: 30016,
    NT_OUT_OBJECTLAYER: 30017,
    NT_OUT_POSTPROCESSING: 30018,
    NT_OUT_RENDERTARGET: 30019,
    NT_OUT_PROJECTION: 30021,
    NT_OUT_DISPLACEMENT: 30022,
    NT_OUT_STRING: 30023,
    NT_OUT_RENDER_PASSES: 30024,
    NT_OUT_RENDER_LAYER: 30025,
    NT_OUT_VOLUME_RAMP: 30026,
    NT_OUT_ANIMATION_SETTINGS: 30027,
    NT_OUT_LUT: 30028,
    NT_OUT_RENDER_JOB: 30029,
    NT_OUT_TOON_RAMP: 30030,
    NT_OUT_BIT_MASK: 30031,
    NT_OUT_ROUND_EDGES: 30032,
    NT_OUT_MATERIAL_LAYER: 30033,
    NT_OUT_OCIO_VIEW: 30034,
    NT_OUT_OCIO_LOOK: 30035,
    NT_OUT_OCIO_COLOR_SPACE: 30036,
    NT_OUT_OUTPUT_AOV_GROUP: 30037,
    NT_OUT_OUTPUT_AOV: 30038,
    NT_OUT_TEX_COMPOSITE_LAYER: 30039,
    NT_OUT_OUTPUT_AOV_LAYER: 30040,
    NT_OUT_BLENDING_SETTINGS: 30044,
    NT_OUT_POST_VOLUME: 30045,
    NT_OUT_TRACE_SET_VISIBILITY_RULE_GROUP: 30046,
    NT_OUT_TRACE_SET_VISIBILITY_RULE: 30047,
    NT_SWITCH_OFFSET: 40000,
    NT_SWITCH_BOOL: 40001,
    NT_SWITCH_FLOAT: 40002,
    NT_SWITCH_INT: 40003,
    NT_SWITCH_TRANSFORM: 40004,
    NT_SWITCH_TEXTURE: 40005,
    NT_SWITCH_EMISSION: 40006,
    NT_SWITCH_MATERIAL: 40007,
    NT_SWITCH_CAMERA: 40008,
    NT_SWITCH_ENVIRONMENT: 40009,
    NT_SWITCH_IMAGER: 40010,
    NT_SWITCH_KERNEL: 40011,
    NT_SWITCH_GEOMETRY: 40012,
    NT_SWITCH_MEDIUM: 40013,
    NT_SWITCH_PHASEFUNCTION: 40014,
    NT_SWITCH_FILM_SETTINGS: 40015,
    NT_SWITCH_ENUM: 40016,
    NT_SWITCH_OBJECTLAYER: 40017,
    NT_SWITCH_POSTPROCESSING: 40018,
    NT_SWITCH_RENDERTARGET: 40019,
    NT_SWITCH_PROJECTION: 40021,
    NT_SWITCH_DISPLACEMENT: 40022,
    NT_SWITCH_STRING: 40023,
    NT_SWITCH_RENDER_PASSES: 40024,
    NT_SWITCH_RENDER_LAYER: 40025,
    NT_SWITCH_VOLUME_RAMP: 40026,
    NT_SWITCH_ANIMATION_SETTINGS: 40027,
    NT_SWITCH_LUT: 40028,
    NT_SWITCH_RENDER_JOB: 40029,
    NT_SWITCH_TOON_RAMP: 40030,
    NT_SWITCH_BIT_MASK: 40031,
    NT_SWITCH_ROUND_EDGES: 40032,
    NT_SWITCH_MATERIAL_LAYER: 40033,
    NT_SWITCH_OCIO_VIEW: 40034,
    NT_SWITCH_OCIO_LOOK: 40035,
    NT_SWITCH_OCIO_COLOR_SPACE: 40036,
    NT_SWITCH_OUTPUT_AOV_GROUP: 40037,
    NT_SWITCH_OUTPUT_AOV: 40038,
    NT_SWITCH_TEX_COMPOSITE_LAYER: 40039,
    NT_SWITCH_OUTPUT_AOV_LAYER: 40040,
    NT_SWITCH_BLENDING_SETTINGS: 40044,
    NT_SWITCH_POST_VOLUME: 40045,
    NT_SWITCH_TRACE_SET_VISIBILITY_RULE_GROUP: 40046,
    NT_SWITCH_TRACE_SET_VISIBILITY_RULE: 40047,
    NT_MATERIALX_RANGE_START: 50000,
    NT_TEX_MX_IMAGE: 50001,
    NT_TEX_MX_TILEDIMAGE: 50002,
    NT_TEX_MX_CONSTANT: 50003,
    NT_TEX_MX_RAMPLR: 50004,
    NT_TEX_MX_RAMPTB: 50005,
    NT_TEX_MX_RAMP4: 50006,
    NT_TEX_MX_SPLITLR: 50007,
    NT_TEX_MX_SPLITTB: 50008,
    NT_TEX_MX_NOISE2D: 50009,
    NT_TEX_MX_NOISE3D: 50010,
    NT_TEX_MX_FRACTAL3D: 50011,
    NT_TEX_MX_CELLNOISE2D: 50012,
    NT_TEX_MX_CELLNOISE3D: 50013,
    NT_TEX_MX_WORLEYNOISE2D: 50014,
    NT_TEX_MX_WORLEYNOISE3D: 50015,
    NT_TEX_MX_POSITION: 50016,
    NT_TEX_MX_NORMAL: 50017,
    NT_TEX_MX_TANGENT: 50018,
    NT_TEX_MX_BITANGENT: 50019,
    NT_TEX_MX_TEXCOORD: 50020,
    NT_TEX_MX_FRAME: 50021,
    NT_TEX_MX_TIME: 50022,
    NT_TEX_MX_UPDIRECTION: 50023,
    NT_TEX_MX_ADD: 50024,
    NT_TEX_MX_SUBTRACT: 50026,
    NT_TEX_MX_TRANSFORMMATRIX3X3: 50027,
    NT_TEX_MX_DIVIDE: 50028,
    NT_TEX_MX_COMBINE2_VECTOR2FLOAT: 50029,
    NT_TEX_MX_MULTIPLY: 50030,
    NT_TEX_MX_COMBINE2_VECTOR3FLOAT: 50031,
    NT_TEX_MX_MODULO: 50032,
    NT_TEX_MX_ABSVAL: 50033,
    NT_TEX_MX_SIGN: 50034,
    NT_TEX_MX_FLOOR: 50035,
    NT_TEX_MX_CEIL: 50036,
    NT_TEX_MX_ROUND: 50037,
    NT_TEX_MX_POWER: 50038,
    NT_TEX_MX_SIN: 50039,
    NT_TEX_MX_COS: 50040,
    NT_TEX_MX_TAN: 50041,
    NT_TEX_MX_ASIN: 50042,
    NT_TEX_MX_ACOS: 50043,
    NT_TEX_MX_ATAN2: 50044,
    NT_TEX_MX_SQRT: 50045,
    NT_TEX_MX_LN: 50046,
    NT_TEX_MX_EXP: 50047,
    NT_TEX_MX_CLAMP: 50048,
    NT_TEX_MX_MIN: 50049,
    NT_TEX_MX_MAX: 50050,
    NT_TEX_MX_NORMALIZE: 50051,
    NT_TEX_MX_MAGNITUDE: 50052,
    NT_TEX_MX_DOTPRODUCT: 50053,
    NT_TEX_MX_CROSSPRODUCT: 50054,
    NT_TEX_MX_TRANSFORMPOINT: 50055,
    NT_TEX_MX_TRANSFORMVECTOR: 50056,
    NT_TEX_MX_TRANSFORMNORMAL: 50057,
    NT_TEX_MX_TRANSFORMMATRIX: 50058,
    NT_TEX_MX_NORMALMAP: 50059,
    NT_TEX_MX_TRANSPOSE: 50060,
    NT_TEX_MX_DETERMINANT: 50061,
    NT_TEX_MX_INVERTMATRIX: 50062,
    NT_TEX_MX_INVERT: 50063,
    NT_TEX_MX_ROTATE2D: 50064,
    NT_TEX_MX_ROTATE3D: 50065,
    NT_TEX_MX_PLACE2D: 50066,
    NT_TEX_MX_SAFEPOWER: 50067,
    NT_TEX_MX_REMAP: 50068,
    NT_TEX_MX_SMOOTHSTEP: 50069,
    NT_TEX_MX_COMBINE2_COLOR3FLOAT: 50070,
    NT_TEX_MX_COMBINE2_VECTOR2VECTOR2: 50071,
    NT_TEX_MX_LUMINANCE: 50072,
    NT_TEX_MX_RGBTOHSV: 50073,
    NT_TEX_MX_HSVTORGB: 50074,
    NT_TEX_MX_CONTRAST: 50075,
    NT_TEX_MX_RANGE: 50076,
    NT_TEX_MX_HSVADJUST: 50077,
    NT_TEX_MX_SATURATE: 50078,
    NT_TEX_MX_PREMULT: 50079,
    NT_TEX_MX_UNPREMULT: 50080,
    NT_TEX_MX_PLUS: 50081,
    NT_TEX_MX_MINUS: 50082,
    NT_TEX_MX_DIFFERENCE: 50083,
    NT_TEX_MX_BURN: 50084,
    NT_TEX_MX_DODGE: 50085,
    NT_TEX_MX_SCREEN: 50086,
    NT_TEX_MX_OVERLAY: 50087,
    NT_TEX_MX_DISJOINTOVER: 50088,
    NT_TEX_MX_IN: 50089,
    NT_TEX_MX_MASK: 50090,
    NT_TEX_MX_MATTE: 50091,
    NT_TEX_MX_OUT: 50092,
    NT_TEX_MX_OVER: 50093,
    NT_TEX_MX_INSIDE: 50094,
    NT_TEX_MX_OUTSIDE: 50095,
    NT_TEX_MX_MIX: 50096,
    NT_TEX_MX_IFGREATER: 50097,
    NT_TEX_MX_IFGREATEREQ: 50098,
    NT_TEX_MX_IFEQUAL: 50099,
    NT_TEX_MX_SWITCH: 50100,
    NT_TEX_MX_EXTRACT2: 50101,
    NT_TEX_MX_COMBINE2: 50102,
    NT_TEX_MX_COMBINE3: 50103,
    NT_TEX_MX_COMBINE4: 50104,
    NT_TEX_MX_EXTRACT4: 50105,
    NT_TEX_MX_SEPARATE2: 50106,
    NT_TEX_MX_SEPARATE3: 50107,
    NT_TEX_MX_SEPARATE4: 50108,
    NT_TEX_MX_CONVERT: 50109,
    NT_TEX_MX_TRIPLANARPROJECTION: 50110,
    NT_TEX_MX_EXTRACT3: 50111,
    NT_TEX_MX_NOT: 50112,
    NT_TEX_MX_AND: 50113,
    NT_TEX_MX_OR: 50114,
    NT_TEX_MX_XOR: 50115,
    NT_TEX_MX_REFLECT: 50116,
    NT_TEX_MX_REFRACT: 50117,
    NT_TEX_MX_COLORCORRECT: 50118,
    NT_TEX_MX_TRIANGLEWAVE: 50119,
    NT_TEX_MX_CREATEMATRIX: 50120,
    NT_TEX_MX_CREATEMATRIX3X3: 50121,
    NT_TEX_MX_RANDOMFLOAT: 50122,
    NT_TEX_MX_RANDOMCOLOR: 50123,
    NT_TEX_MX_BUMP: 50124,
    NT_TEX_MX_FRACT: 50125,
    NT_TEX_MX_VIEWDIRECTION: 50126,
    NT_TEX_MX_FACINGRATIO: 50127,
    NT_TEX_MX_HEIGHTTONORMAL: 50128,
    NT_TEX_MX_GEOMCOLOR: 50129,
    NT_TEX_MX_GEOMPROPVALUE: 50130,
    NT_TEX_MX_IFGREATER_BOOL: 50131,
    NT_TEX_MX_IFEQUAL_BOOL: 50132,
    NT_TEX_MX_IFGREATEREQ_BOOL: 50133,
    NT_TEX_MX_IFEQUAL_B: 50134,
    NT_TEX_MX_DISTANCE: 50135,
    NT_MATERIALX_RANGE_END: 50136,
} as const;

// Type helper for NodeType
export type NodeTypeName = keyof typeof NodeType;
export type NodeTypeValue = typeof NodeType[NodeTypeName];

// Convenience aliases for common node types
export const NT_PROJECT = NodeType.NT_RENDERTARGET;  // Project is typically render target root
export const NT_CAMERA = NodeType.NT_CAM_THINLENS;   // Default camera type
export const NT_MESH = NodeType.NT_GEO_MESH;         // Mesh geometry
export const NT_SCATTERER = NodeType.NT_GEO_SCATTER; // Scatter object
export const NT_LIGHT_SUN = NodeType.NT_LIGHT_DIRECTIONAL;  // Sun light
export const NT_LIGHT_AREA = NodeType.NT_LIGHT_QUAD;         // Area light
export const NT_LIGHT_PORTAL = NodeType.NT_MAT_PORTAL;       // Portal (material-based)
export const NT_ENVIRONMENT = NodeType.NT_RENDERTARGET;      // Environment (use render target)
export const NT_TRANSFORM = NodeType.NT_TRANSFORM_3D;        // 3D transform
